--- a/index.html
+++ b/index.html
@@ -19,6 +19,44 @@
             <div class="logo-section">
             </div>
           </div>
+          <div class="row">
+            <div class="nav-item">
+              <span>home</span>
+            </div>
+            <div class="nav-item">
+              <span>about us</span>
+            </div>
+            <div class="nav-item">
+              <span>work</span>
+            </div>
+            <div class="nav-item">
+              <span>contact</span>
+            </div>
+          </div>
+          <div class="row">
+            <div class="social-links">
+              <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 active-links">
+                <a href="#">
+                  <span class="fb">
+                  </span>
+                </a>
+                <a href="#">
+                  <span class="insta">
+                  </span>
+                </a>
+                <a href="#">
+                  <span class="v">
+                  </span>
+                </a>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 pass-links">
+                <a href="#">
+                  <span class="ik">
+                  </span>
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
           
