--- a/index.html
+++ b/index.html
@@ -57,9 +57,17 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="contacts">
+              <p>+972 52 7407137</p>
+              <p>+972 54 6302906</p>
+              <p>hello@mustachestudio.com</p>
+            </div>
+          </div>
         </div>
         <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-          
+          <div class="row home"></div>
+          <div class="row latest-works"></div>
         </div>
       </div>
     </section>
