--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
         </div>
         <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
           <div class="row home"></div>
-          <div class="row latest-works"></div>
+          <div class="row latest-works">
+            <h2>SOME OF OUR LATEST WORK</h2>
+          </div>
         </div>
       </div>
     </section>
