--- a/index.html
+++ b/index.html
@@ -66,7 +66,13 @@
           </div>
         </div>
         <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-          <div class="row home"></div>
+          <div class="row home">
+            <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1 main-content">
+              <h1>Mustache</h1>
+              <h2>ANIMATION AND VIDEO PRODUCTION</h2>
+              <a class="cintact-btn" href="#">contact us now</a>
+            </div>
+          </div>
           <div class="row latest-works">
             <h2>SOME OF OUR LATEST WORK</h2>
           </div>
