--- a/index.html
+++ b/index.html
@@ -11,10 +11,60 @@
     <script src="js/test.js"></script>
 </head>
 <body>
+  <section class="container-fluid contact-form-section">
+    <div class="close-icon"></div>
+    <div class="row">
+      <div class="col-lg-3 col-md-2 col-sm-1 col-xs-1"></div> 
+      <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1 contact-form">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 contact-info">
+          <span class="contact-logo"></span>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+          <form action="">
+            <div class="user-contacts-section">
+              <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 user-name">
+                <p>Name</p>
+                <input type="text" required class="user-contact">
+              </div>
+              <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 user-email">
+                <p>email</p>
+                <input type="text" required class="user-contact">
+              </div>
+              <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 user-phone">
+                <p>phone</p>
+                <input type="text" class="user-contact">
+              </div>
+              <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 user-company">
+                <p>company</p>
+                <input type="text" class="user-contact">
+              </div>
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <p>Комментарий:</p>
+                <textarea name="" id="" cols="30" rows="10" class="contact-textarea" placeholder="Тут Вы можете указать услуги, которые Вам интересны:"></textarea>
+              </div>
+            </div>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 send-request-contact">
+              <span>
+                <hr class="send-request-disign horizontal-line line-left">
+              </span>
+              <span class="send-request-disign circle circle-left"></span>
+              <div class="send-request-disign left-side-block"></div>
+              <input type="submit" value="ОТПРАВИТЬ ЗАЯВКУ">
+              <div class="send-request-disign right-side-block"></div>
+              <span class="send-request-disign circle circle-right"></span>
+              <span>
+                <hr class="send-request-disign horizontal-line line-right">
+              </span>
+            </div> 
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
 	<main>
 		<section  class="container-fluid">
       <div class="row">
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 menu">
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 side-menu">
           <div class="row">
             <div class="logo-section">
             </div>
