--- a/index.html
+++ b/index.html
@@ -39,22 +39,12 @@
                 <input type="text" class="user-contact">
               </div>
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <p>Комментарий:</p>
-                <textarea name="" id="" cols="30" rows="10" class="contact-textarea" placeholder="Тут Вы можете указать услуги, которые Вам интересны:"></textarea>
+                <p>Message</p>
+                <textarea name="" id="" cols="30" rows="10" class="contact-textarea"></textarea>
               </div>
             </div>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 send-request-contact">
-              <span>
-                <hr class="send-request-disign horizontal-line line-left">
-              </span>
-              <span class="send-request-disign circle circle-left"></span>
-              <div class="send-request-disign left-side-block"></div>
-              <input type="submit" value="ОТПРАВИТЬ ЗАЯВКУ">
-              <div class="send-request-disign right-side-block"></div>
-              <span class="send-request-disign circle circle-right"></span>
-              <span>
-                <hr class="send-request-disign horizontal-line line-right">
-              </span>
+              <input type="submit" value="SEND">
             </div> 
           </form>
         </div>
