--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1 contact-form">
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 contact-info">
           <span class="contact-logo"></span>
+          <p class="header">video and animation production</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum ad hic iste. Laboriosam molestiae iure et, accusamus consequuntur distinctio doloremque, rerum, ex vitae dicta qui amet, quasi ea magnam eum.</p>
+          <p>+972 52 7407137 | +972 54 6302906<br>hello@mustachestudio.com</p>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
           <form action="">
