--- a/index.html
+++ b/index.html
@@ -57,7 +57,73 @@
 	<main>
 		<section  class="container-fluid">
       <div class="row">
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 side-menu">
+
+
+
+        <div>
+          <button class="menu-burger">
+            <i class="fa fa-bars fa-2x burger-icon" aria-hidden="true"></i>
+          </button>
+          <button class="menu-burger">
+            <i class="fa fa-times fa-2x side-icon" aria-hidden="true"></i>
+          </button>
+        </div>
+        <div class="side-menu-mobile">
+          <div class="row">
+            <div class="logo-section-mobile">
+            </div>
+          </div>
+          <div class="row">
+            <div class="nav-item">
+              <span>home</span>
+            </div>
+            <div class="nav-item">
+              <span>about us</span>
+            </div>
+            <div class="nav-item">
+              <span>work</span>
+            </div>
+            <div class="nav-item">
+              <span>contact</span>
+            </div>
+          </div>
+          <div class="row">
+            <div class="social-links">
+              <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 active-links">
+                <a href="#">
+                  <span class="fb">
+                  </span>
+                </a>
+                <a href="#">
+                  <span class="insta">
+                  </span>
+                </a>
+                <a href="#">
+                  <span class="v">
+                  </span>
+                </a>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 pass-links">
+                <a href="#">
+                  <span class="ik">
+                  </span>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="contacts">
+              <p>+972 52 7407137</p>
+              <p>+972 54 6302906</p>
+              <p>hello@mustachestudio.com</p>
+            </div>
+          </div>
+        </div>
+
+
+
+
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-0 side-menu">
           <div class="row">
             <div class="logo-section">
             </div>
