burger-menu-mobile

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </button>
         </div>
         <div class="side-menu-mobile">
-          <div class="row">
+          <div class="row costom-row">
             <div class="logo-section-mobile">
             </div>
           </div>
@@ -112,7 +112,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="contacts">
+            <div class="contacts-mobile">
               <p>+972 52 7407137</p>
               <p>+972 54 6302906</p>
               <p>hello@mustachestudio.com</p>
