--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="logo-section-mobile">
             </div>
           </div>
-          <div class="row">
+          <div class="row costom-row">
             <div class="nav-item">
               <span>home</span>
             </div>
